--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
     compile 'com.1gravity:android-contactpicker:1.3.2'
+    compile 'com.github.satyan:sugar:1.5'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.android.support:support-v4:26.+'
+    compile 'com.squareup.picasso:picasso:2.5.0'
     testCompile 'junit:junit:4.12'
 }
